--- a/app/scss/modules/technology.scss
+++ b/app/scss/modules/technology.scss
@@ -1,4 +1,5 @@
 .technology {
+  position: relative;
   padding-bottom: 145px;
   padding-top: 130px;
   background-color: $mainDark;
@@ -14,12 +15,14 @@
   }
 
   .container {
+    position: relative;
     @include md {
       padding-right: 24px;
     }
   }
 
   &__caption {
+    opacity: 0;
     margin-bottom: 10px;
     font-family: $main-ff-bold;
     font-size: 48px;
@@ -33,6 +36,7 @@
   }
 
   &__subcaption {
+    opacity: 0;
     max-width: 460px;
     margin-bottom: 32px;
     font-size: 16px;
@@ -41,6 +45,7 @@
   }
 
   &-grid {
+    opacity: 0;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(225px, 1fr));
     justify-self: center;
@@ -54,7 +59,7 @@
     &-item {
       height: 238px;
       padding: 84px 58px 0 40px;
-      background-color: $mainDark;
+      background-color: rgba(17, 17, 17, 0);
       border: 1px solid #1e1e1e;
       margin-left: -1px;
       margin-bottom: -1px;
