--- a/app/scss/base/animations.scss
+++ b/app/scss/base/animations.scss
@@ -294,3 +294,21 @@
     transform: translate3d(0, 0, 0);
   }
 }
+
+.fadeInUpFixed {
+  animation: fadeInUpFixed 1s cubic-bezier(0.215, 0.61, 0.355, 1) forwards;
+}
+
+@keyframes fadeInUpFixed {
+  from {
+    opacity: 0;
+    -webkit-transform: translate3d(0, 30%, 0);
+    transform: translate3d(0, 50px, 0);
+  }
+
+  to {
+    opacity: 1;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+}
