--- a/app/css/main.css
+++ b/app/css/main.css
@@ -475,6 +475,12 @@ main {
     .main-page-bg {
       display: none; } }
 
+#cursor {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  background-color: orange; }
+
 @font-face {
   font-family: 'poppins-regular';
   src: url("../fonts/poppins/poppins-light.ttf") format("truetype");
@@ -521,7 +527,7 @@ main {
 
 @keyframes bgSlideInWide {
   from {
-    left: 3000px; }
+    left: 4000px; }
   to {
     left: 119px; } }
 
@@ -688,6 +694,19 @@ main {
     -webkit-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0); } }
 
+.fadeInUpSlider {
+  animation: fadeInUp 1s cubic-bezier(0.215, 0.61, 0.355, 1) forwards; }
+
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    -webkit-transform: translate3d(0, 100px, 0);
+    transform: translate3d(0, 100px, 0); }
+  to {
+    opacity: 1;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0); } }
+
 .fadeInUpFixed {
   animation: fadeInUpFixed 1s cubic-bezier(0.215, 0.61, 0.355, 1) forwards; }
 
@@ -700,6 +719,169 @@ main {
     opacity: 1;
     -webkit-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0); } }
+
+@-webkit-keyframes border-transform {
+  0%,
+  100% {
+    border-radius: 63% 37% 54% 46% / 55% 48% 52% 45%; }
+  14% {
+    border-radius: 40% 60% 54% 46% / 49% 60% 40% 51%; }
+  28% {
+    border-radius: 54% 46% 38% 62% / 49% 70% 30% 51%; }
+  42% {
+    border-radius: 61% 39% 55% 45% / 61% 38% 62% 39%; }
+  56% {
+    border-radius: 61% 39% 67% 33% / 70% 50% 50% 30%; }
+  70% {
+    border-radius: 50% 50% 34% 66% / 56% 68% 32% 44%; }
+  84% {
+    border-radius: 46% 54% 50% 50% / 35% 61% 39% 65%; } }
+
+@keyframes border-transform {
+  0%,
+  100% {
+    border-radius: 63% 37% 54% 46% / 55% 48% 52% 45%; }
+  14% {
+    border-radius: 40% 60% 54% 46% / 49% 60% 40% 51%; }
+  28% {
+    border-radius: 54% 46% 38% 62% / 49% 70% 30% 51%; }
+  42% {
+    border-radius: 61% 39% 55% 45% / 61% 38% 62% 39%; }
+  56% {
+    border-radius: 61% 39% 67% 33% / 70% 50% 50% 30%; }
+  70% {
+    border-radius: 50% 50% 34% 66% / 56% 68% 32% 44%; }
+  84% {
+    border-radius: 46% 54% 50% 50% / 35% 61% 39% 65%; } }
+
+.progress-wrap {
+  position: fixed;
+  right: 50px;
+  bottom: 50px;
+  height: 46px;
+  width: 46px;
+  cursor: pointer;
+  display: block;
+  border-radius: 50px;
+  box-shadow: inset 0 0 0 2px rgba(255, 255, 255, 0.2);
+  z-index: 10000;
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(15px);
+  -webkit-transition: all 200ms linear;
+  transition: all 200ms linear; }
+
+.progress-wrap.active-progress {
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0); }
+
+.progress-wrap::after {
+  position: absolute;
+  content: url(../../images/icon/progress-arrow-up.svg);
+  color: #BFBFBF;
+  left: 14px;
+  top: 14px;
+  height: 46px;
+  width: 46px;
+  cursor: pointer;
+  display: block;
+  z-index: 1;
+  -webkit-transition: all 200ms linear;
+  transition: all 200ms linear; }
+
+.progress-wrap:hover::after {
+  opacity: 0; }
+
+.progress-wrap::before {
+  position: absolute;
+  opacity: 0;
+  content: url(../../images/icon/progress-arrow-up_hover.svg);
+  left: 14px;
+  top: 14px;
+  height: 46px;
+  width: 46px;
+  cursor: pointer;
+  display: block;
+  z-index: 2;
+  -webkit-transition: all 200ms linear;
+  transition: all 200ms linear; }
+
+.progress-wrap:hover::before {
+  opacity: 1; }
+
+.progress-wrap svg path {
+  fill: none; }
+
+.progress-wrap svg.progress-circle path {
+  stroke: #BFBFBF;
+  stroke-width: 4;
+  box-sizing: border-box;
+  -webkit-transition: all 200ms linear;
+  transition: all 200ms linear; }
+
+body.light .progress-wrap {
+  box-shadow: inset 0 0 0 2px rgba(0, 0, 0, 0.2); }
+
+body.light .progress-wrap::after {
+  color: var(--black-blue); }
+
+body.light .progress-wrap svg.progress-circle path {
+  stroke: var(--black-blue); }
+
+.circle {
+  -webkit-transition: all 300ms linear;
+  transition: all 300ms linear; }
+
+.circle {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: -5px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background: var(--black-blue-light-3);
+  box-shadow: 0 4px 4px rgba(26, 53, 71, 0.25), 0 0 0 1px rgba(26, 53, 71, 0.07);
+  animation: border-transform 10s linear infinite alternate forwards; }
+
+.circle:hover {
+  box-shadow: 0 8px 8px rgba(26, 53, 71, 0.25), 0 0 0 1px rgba(26, 53, 71, 0.07); }
+
+.circle:before {
+  position: absolute;
+  font-family: "unicons";
+  content: "\eac1";
+  top: 0;
+  left: 0;
+  z-index: 2;
+  font-size: 20px;
+  line-height: 40px;
+  text-align: center;
+  width: 100%;
+  height: 40px;
+  opacity: 1;
+  color: #BFBFBF;
+  -webkit-transition: all 300ms linear;
+  transition: all 300ms linear; }
+
+.circle:after {
+  position: absolute;
+  font-family: "unicons";
+  content: "\eb8f";
+  top: 0;
+  left: 0;
+  z-index: 2;
+  font-size: 20px;
+  line-height: 40px;
+  text-align: center;
+  width: 100%;
+  height: 40px;
+  color: var(--yellow);
+  opacity: 0;
+  -webkit-transition: all 300ms linear;
+  transition: all 300ms linear; }
 
 .blue-link {
   max-width: 300px;
@@ -757,6 +939,7 @@ main {
 .slider {
   padding-top: 140px;
   padding-bottom: 118px;
+  opacity: 0;
   /* CUSTOM THEME */
   /* EO CUSTOM THEME */ }
   @media (max-width: 1024px) {
@@ -890,6 +1073,7 @@ main {
     transform: translateX(-100%); }
 
 .nopage {
+  opacity: 0;
   height: calc(100vh - 79px); }
   @media (max-width: 768px) {
     .nopage {
@@ -2075,19 +2259,11 @@ main {
 
 .contact {
   background-color: #fff;
-  background: linear-gradient(180deg, #111111 20%, #fff 20%); }
+  background: linear-gradient(180deg, #111111 20%, #fff 20%);
+  position: relative; }
   .contact .container {
     position: relative;
     width: 100%; }
-    .contact .container:after {
-      content: "";
-      display: block;
-      position: absolute;
-      right: -99%;
-      top: 0;
-      height: 100%;
-      width: 100%;
-      background-color: #DEDEDE; }
   .contact-background {
     width: 3000px;
     position: absolute;
@@ -2097,8 +2273,7 @@ main {
   .contact-content {
     display: flex;
     justify-content: space-between;
-    padding: 125px 125px 85px;
-    background-color: #DEDEDE; }
+    padding: 125px 125px 85px; }
     @media (max-width: 1024px) {
       .contact-content {
         padding: 86px 60px 85px; } }
@@ -2205,8 +2380,19 @@ main {
           width: 100%;
           margin-bottom: 24px;
           color: #111111; }
-          .contact-content-form .form-input-box__input:focus {
-            border-bottom: 1px solid #0052FF; }
+          .contact-content-form .form-input-box__input:focus ~ .form-input-box__border {
+            transform-origin: bottom left;
+            transform: scaleX(1); }
+        .contact-content-form .form-input-box__border {
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          right: 0;
+          height: 1px;
+          background-color: #0052FF;
+          transform-origin: bottom right;
+          transform: scaleX(0);
+          transition: transform 0.5s ease; }
         .contact-content-form .form-input-box__lable {
           position: absolute;
           bottom: -18px;
@@ -2242,8 +2428,19 @@ main {
           display: block;
           width: 100%;
           color: #111111; }
-          .contact-content-form .form-textarea-box textarea:focus {
-            border-bottom: 1px solid #0052FF; }
+          .contact-content-form .form-textarea-box textarea:focus ~ .form-textarea-box__border {
+            transform-origin: bottom left;
+            transform: scaleX(1); }
+        .contact-content-form .form-textarea-box__border {
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          right: 0;
+          height: 1px;
+          background-color: #0052FF;
+          transform-origin: bottom right;
+          transform: scaleX(0);
+          transition: transform 0.5s ease; }
         .contact-content-form .form-textarea-box__btn {
           border: none;
           outline: none;
@@ -2472,8 +2669,19 @@ main {
           -webkit-text-fill-color: #fff;
           -webkit-box-shadow: none;
           transition: background-color 5000s ease-in-out 0s; }
-        .contact-page .form-input-box__input:focus {
-          border-bottom: 1px solid #0052FF; }
+        .contact-page .form-input-box__input:focus ~ .form-input-box__border {
+          transform-origin: bottom left;
+          transform: scaleX(1); }
+      .contact-page .form-input-box__border {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        height: 1px;
+        background-color: #0052FF;
+        transform-origin: bottom right;
+        transform: scaleX(0);
+        transition: transform 0.5s ease; }
       .contact-page .form-input-box__lable {
         position: absolute;
         bottom: -18px;
@@ -2516,8 +2724,9 @@ main {
           -webkit-text-fill-color: #fff;
           -webkit-box-shadow: none;
           transition: background-color 5000s ease-in-out 0s; }
-        .contact-page .form-textarea-box textarea:focus {
-          border-bottom: 1px solid #0052FF; }
+        .contact-page .form-textarea-box textarea:focus ~ .form-textarea-box__border {
+          transform-origin: bottom left;
+          transform: scaleX(1); }
         @media (max-width: 576px) {
           .contact-page .form-textarea-box textarea {
             margin-bottom: 24px; } }
@@ -2548,6 +2757,16 @@ main {
           height: 1px;
           width: 20px;
           background: #0052FF; }
+      .contact-page .form-textarea-box__border {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        height: 1px;
+        background-color: #0052FF;
+        transform-origin: bottom right;
+        transform: scaleX(0);
+        transition: transform 0.5s ease; }
     .contact-page .form-radio-box-lable__link {
       text-decoration: underline;
       color: #8B8B8B; }
