--- a/app/scss/base/media-mixins.scss
+++ b/app/scss/base/media-mixins.scss
@@ -5,6 +5,7 @@ $md: 768px;
 $lg: 1024px;
 $xl: 1366px;
 $xxl: 1440px;
+$macpro: 1680px;
 
 @mixin xs {
   @media (max-width: #{$xs}) {
@@ -38,6 +39,12 @@ $xxl: 1440px;
 
 @mixin xxl {
   @media (max-width: #{$xxl}) {
+    @content;
+  }
+}
+
+@mixin macpro {
+  @media (max-width: #{$macpro}) {
     @content;
   }
 }
